--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ web_modules/
 .env
 .env.test
 .env.production
+.prod.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -129,7 +130,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
