Refactor to music backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes-app-back-end",
+  "name": "music-app-back-end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
